--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,5 +1,9 @@
 @import "../../scss/reset";
 
+body{
+    background: linear-gradient(to bottom, rgb(183, 211, 196), rgb(175, 135, 42));
+}
+
 header{
     display: flex;
     flex-direction: column;
@@ -27,6 +31,7 @@ header{
         width: 50%;
         padding: 0.6rem;
         border-radius: 1rem;
+        border: none;
     }
 }
 
