--- a/src/components/Products/ProductCard.scss
+++ b/src/components/Products/ProductCard.scss
@@ -12,7 +12,7 @@
     display: flex;
     flex-direction: column;
     width: 16rem;
-    height: 22rem;
+    height: 20rem;
     border: 2px solid black;
     margin: 1rem;
     position: relative;
@@ -40,8 +40,8 @@
     }
 
     img{
-        width: 15rem;
-        height: 18rem;
+        width: 100%;
+        height: 17.5rem;
         filter: sepia(0.5);
         transition: all 0.3s ease;
     }
