--- a/src/components/Products/ProductCard.scss
+++ b/src/components/Products/ProductCard.scss
@@ -12,8 +12,9 @@
     display: flex;
     flex-direction: column;
     width: 16rem;
-    height: 20rem;
-    border: 2px solid black;
+    height: 22rem;
+    border-radius: 1rem;
+    // border: 2px solid black;
     margin: 1rem;
     position: relative;
     overflow: hidden;
@@ -41,7 +42,7 @@
 
     img{
         width: 100%;
-        height: 17.5rem;
+        height: 20rem;
         filter: sepia(0.5);
         transition: all 0.3s ease;
     }
